# OpenGL_3DProject

./: .gitignore  BUILD_debug.bat  BUILD_release.bat  CMakeLists.txt  GenSolution.bat  README.md  TODO.txt
_BACKUP/: BUILD_release.bat
_BACKUP/src/: Application.cpp  Input.h  Renderer.cpp  Shader.cpp  Shader.h  Window.h
include/GLAD/: glad.h
lib/: glad.c  glfw3.lib
res/shaders/: basic.glsl
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp
